[tool.poetry]
name = "SeedPhotos"
version = "0.1.0"
description = ""
authors = ["Vinicius Barbosa de Aguiar <vb9763662@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
